fix: use bot model configs first
